ThemeConfig: Replace `sizes` with `sizeScheme` (singular) property
Interpolate multiple ThemeConfigs with the resolved sizes options.  Eliminate
one more level of nested loop processing in BitmapsRenderer, and move variant
directory resolution out into ThemeConfig.newVariant().

Introduce internal cartesianProduct(Collection<?>... options) that could easily
interpolate new options (f.e. upcoming color).